--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@typescript-eslint/parser": "^5.41.0",
     "eslint-plugin-react": "^7.31.10",
     "husky": "^8.0.1",
+    "leaflet": "^1.9.3",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.18.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.0",
+    "@types/leaflet": "^1.9.0",
     "@types/node": "^18.11.7",
     "@types/react": "^18.0.24",
     "@types/styled-components": "^5.1.26",
