--- a/package.json
+++ b/package.json
@@ -17,35 +17,36 @@
     ]
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
-    "eslint-plugin-react": "^7.31.10",
-    "husky": "^8.0.1",
-    "leaflet": "^1.9.3",
+    "@typescript-eslint/eslint-plugin": "5.41.0",
+    "@typescript-eslint/parser": "5.41.0",
+    "eslint-plugin-react": "7.31.10",
+    "husky": "8.0.1",
+    "leaflet": "1.7.1",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-leaflet": "^4.2.0"
+    "react-leaflet": "3.2.5",
+    "webpack": "5.66.0"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.18.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.2.0",
-    "@types/leaflet": "^1.9.0",
-    "@types/node": "^18.11.7",
-    "@types/react": "^18.0.24",
-    "@types/styled-components": "^5.1.26",
-    "babel-plugin-styled-components": "^2.0.7",
+    "@babel/preset-typescript": "7.18.6",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/react": "13.4.0",
+    "@types/jest": "29.2.0",
+    "@types/leaflet": "1.9.0",
+    "@types/node": "18.11.7",
+    "@types/react": "18.0.24",
+    "@types/styled-components": "5.1.26",
+    "babel-plugin-styled-components": "2.0.7",
     "eslint": "8.26.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.2.2",
-    "jest-environment-jsdom": "^29.2.2",
-    "lint-staged": "^13.0.3",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "29.2.2",
+    "jest-environment-jsdom": "29.2.2",
+    "lint-staged": "13.0.3",
     "prettier": "2.7.1",
-    "styled-components": "^5.3.6",
-    "typescript": "^4.8.4"
+    "styled-components": "5.3.6",
+    "typescript": "4.8.4"
   }
 }
