--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint src --max-warnings=0",
     "postinstall": "husky install",
     "test": "jest",
-    "test:watch": "yarn test --watch "
+    "test:watch": "yarn test --watch ",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "lint-staged": {
     "src/**/*": [
@@ -33,6 +34,9 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "7.18.6",
+    "@graphql-codegen/add": "3.2.3",
+    "@graphql-codegen/cli": "2.16.4",
+    "@graphql-codegen/client-preset": "1.2.6",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@types/jest": "29.2.0",
@@ -50,6 +54,7 @@
     "lint-staged": "13.0.3",
     "prettier": "2.7.1",
     "styled-components": "5.3.6",
-    "typescript": "4.8.4"
+    "ts-node": "10.9.1",
+    "typescript": "4.9.4"
   }
 }
