--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "husky": "8.0.1",
     "leaflet": "1.7.1",
     "next": "13.0.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-leaflet": "3.2.5",
